z-index element correction

--- a/antic-landing-page/src/features/FloatingButton/FloatingButton.css
+++ b/antic-landing-page/src/features/FloatingButton/FloatingButton.css
@@ -2,4 +2,5 @@
     position: fixed;
     top: 2.2rem;
     right: 3rem;
+    z-index: 1;
 }
