--- a/antic-landing-page/src/features/HeroSection/HeroSection.css
+++ b/antic-landing-page/src/features/HeroSection/HeroSection.css
@@ -2,7 +2,6 @@
     height: 90vh;
     width: 100vw;
     display: flex;
-    z-index: -1;
 }
 
 .hero-content{
