--- a/antic-landing-page/src/features/MenuBar/MenuBar.css
+++ b/antic-landing-page/src/features/MenuBar/MenuBar.css
@@ -4,6 +4,7 @@
   align-items: center;
   position: absolute;
   top: 0;
+  z-index: 1;
 }
 
 .header img {
